TEST_PROGRAMS/VALID/05/in-line_comments.go
/* In-line comment */

package main // One in-line comment

var x int /* Another */

func main() { // Another
	x := 10 /* One
			 * more */
} // Kidding, last one
