TEST_PROGRAMS/INVALID/05/distributed_type_same_line_with_comma.go
package main

// Error: Two alias on one line, seperated by comma
type (
  r1, r2 rune
)

func main() {

}
